<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/menu_start_download"
        android:title="@string/start_download" />
    <item
        android:id="@+id/menu_pause_download"
        android:title="@string/pause_download" />
    <item
        android:id="@+id/menu_update_model"
        android:title="@string/update" />
    <item
        android:id="@+id/menu_delete_model"
        android:title="@string/delete_model" />
    <item
        android:id="@+id/menu_open_model_card"
        android:title="@string/open_model_card" />
    <item
        android:id="@+id/menu_copy_error_info"
        android:title="@string/menu_copy_error_info" />
</menu> 