<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="download_provider"
        android:title="@string/select_download_provider"
        android:entries="@array/download_provider_entries"
        android:entryValues="@array/download_provider_values" />

    <SwitchPreferenceCompat
        android:key="stop_download_on_chat"
        android:title="@string/stop_download_tasks_when_chat"
        android:summary="@string/stop_download_reason"
        android:defaultValue="true" />

    <SwitchPreferenceCompat
        android:key="enable_api_service"
        android:title="@string/enable_api_service"
        android:summary="@string/enable_api_service_summary"
        android:defaultValue="false" />

    <Preference
        android:key="reset_api_config"
        android:title="@string/reset_api_config"
        android:summary="@string/reset_api_config_summary" />

    <ListPreference
        android:key="diffusion_memory_mode"
        android:title="@string/diffusion_memory_mode"
        android:entries="@array/diffusion_memory_mode_entries"
        android:entryValues="@array/diffusion_memory_mode_values"
        android:defaultValue="0"/>

    <Preference
        android:key="check_update"
        android:title="@string/check_for_update"
        android:summary="Tap to check for updates" />

</PreferenceScreen>
