<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/start_new_chat"
        android:title="@string/start_new_chat"
        app:showAsAction="never" />
    <item
        android:id="@+id/start_voice_chat"
        android:title="@string/start_voice_chat"
        android:icon="@drawable/ic_voice_chat"
        android:iconTint="@color/color_foreground"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/show_performance_metrics"
        android:title="@string/show_performance_metrics"
        app:showAsAction="never"
        android:checkable="true"
        android:checked="true"/>
    <item
        android:id="@+id/realtime_audio_playback"
        android:title="@string/realtime_audio_playback"
        app:showAsAction="never"
        android:checkable="true"
        android:checked="true"/>
    <item
        android:id="@+id/menu_item_benchmark_test"
        android:title="@string/menu_item_benchmark_test"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_item_model_settings"
        android:title="@string/model_settings"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/menu_item_api_settings"
        android:title="@string/api_settings"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/menu_item_api_console"
        android:title="@string/api_console"
        app:showAsAction="never" />
<!--    <item-->
<!--        android:id="@+id/menu_item_sampler_spinner"-->
<!--        android:title="@string/sampler"-->
<!--        app:showAsAction="always"-->
<!--        android:textColor="#FFFFFF"-->
<!--        app:actionLayout="@layout/item_sampler_spinner" />-->
</menu>