<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="1"
        android:title="@string/settings" />
    <item
        android:id="@+id/menu_update_model"
        android:orderInCategory="2"
        android:title="@string/update" />
    <item
        android:id="@+id/menu_delete_model"
        android:orderInCategory="3"
        android:title="@string/delete_model" />
    <item
        android:id="@+id/menu_open_model_card"
        android:orderInCategory="4"
        android:title="@string/open_model_card" />
    <item
        android:id="@+id/menu_show_model_info"
        android:orderInCategory="4"
        android:visible="false"
        android:title="@string/show_model_info" />
</menu> 